update projects page

--- a/projects.html
+++ b/projects.html
@@ -7,203 +7,108 @@
     <link href="./output.css" rel="stylesheet">
 </head>
 
-<body class="">
-    <!-- Add navigation buttons -->
-    <button id="prevBtn"
-        class="fixed left-4 top-1/2 -translate-y-1/2 bg-amber-700 text-white p-4 rounded-full z-10">←</button>
-    <button id="nextBtn"
-        class="fixed right-4 top-1/2 -translate-y-1/2 bg-amber-700 text-white p-4 rounded-full z-10">→</button>
+<body class="bg-beige min-h-screen p-14 px-28">
+    <div class="">
+        <h1 class="font-serif text-4xl mb-12 text-center">My Projects !</h1>
 
-    <!-- Projects Container -->
-    <div id="projectsContainer" class="flex transition-transform duration-500 h-full">
-        <!-- Project 1 -->
-        <div
-            class="snap-start flex-none w-full bg-[url('./static/backgroundSprite_Green.png')] md:bg-[length:400px_400px] bg-[length:300px_300px] bg-repeat min-h-screen w-full">
-            <div class="bg-beige grid grid-cols-[56fr_44fr] md:gap-y-32 w-[88%] md:w-[70%] mx-auto min-h-screen ">
-                <div class="p-10">
-                    <h1 class="font-serif font-semibold text-xl md:text-3xl h-fit">Coffee Data Visualization</h1>
-                    <ul class="flex font-serif font-regular gap-3 mt-3">
-                        <li class="bg-green-200 px-1">data visualization</li>
-                        <li class="bg-green-200 px-1">JavaScript</li>
-                        <li class="bg-green-200 px-1">D3</li>
-                    </ul>
-                    <div class="space-y-4 px-8 md:px-0 font-serif md:text-lg mt-6">
-                        <p>
-                            An interactive data visualization project that
-                            maps and analyzes global coffee trade patterns, production, and consumption.
-                        </p>
-                        <p>
-                            Explore insights into the coffee trade, global
-                            coffee consumption patterns, pricing trends, consumer reviews, and the diverse types of
-                            coffee consumed across different countries.
-                        </p>
+        <!-- Cards Container - Grid layout first -->
+        <div class="grid grid-cols-2 gap-x-16 gap-y-8 justify-items-center max-w-5xl mx-auto">
+
+            <!-- Row 1, Card 1 - Top Left -->
+            <div
+                class="w-[430px] h-[320px] bg-green shadow-xl rounded-lg p-3 transform -rotate-6 z-10 hover:rotate-0 hover:scale-105 hover:z-50 hover:shadow-2xl transition-all duration-300 ease-in-out cursor-pointer">
+                <div class="p-6 h-full flex flex-col border-dashed border-[3px] rounded-lg border-white">
+                    <h2 class="font-serif text-xl font-semibold mb-3 leading-tight">
+                        Adaptive Augmented Reality Pathfinding for Parkinson's Disease
+                    </h2>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="bg-green-200 px-2 py-[3px] font-serif text-sm">Unity 3D</span>
+                        <span class="bg-green-200 px-2 py-[3px] font-serif text-sm">HCI</span>
+                        <span class="bg-green-200 px-2 py-[3px] font-serif text-sm">Mixed Reality</span>
                     </div>
-                    <div class="pr-24">
-                        <div
-                            class="bg-brown w-full border-2 border-solid border-black font-serif md:text-lg mt-6 relative">
-                            <img class="absolute bottom-10 right-[-10px] w-12" src="./static/PixelArt/sunflower.png"
-                                alt="">
-                            <p class="px-4 py-2">Check it out !</p>
-                            <a class="px-4 py-2 hover:text-gray-800"
-                                href="https://coffeeviz.cafeduvesper.net/">coffeeviz.cafeduvesper.net</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="border-solid border-l border-black flex flex-col items-center w-full ">
-                    <div
-                        class="bg-brown border-2 border-solid border-dark-brown flex w-[60%] justify-center mt-8  mx-16 p-3">
-                        <img class="border-2 border-solid border-dark-brown " src="./static/projects/dataVizGraph"
-                            alt="">
-                    </div>
-                    <div class="bg-brown w-[50%] border-2 border-solid border-black font-serif  mt-4 mb-16">
-                        <p class="pl-4 ">Coffee world trade network represented as a graph</p>
-                    </div>
-                    <div class="bg-brown border-2 border-solid border-dark-brown flex w-[70%] justify-center mx-16 p-3">
-                        <img class="border-2 border-solid border-dark-brown " src="./static/projects/dataVizMap" alt="">
-                    </div>
-                    <div class="bg-brown w-[60%] border-2 border-solid border-black font-serif  mt-4">
-                        <p class="pl-4">Coffee trade network world map</p>
-                    </div>
+                    <p class="text-sm font-serif leading-relaxed text-gray-800 flex-grow">
+                        AR system using Meta Quest 3 integrating dynamic visual cues to help Parkinson's patients
+                        navigate complex spaces
+                    </p>
                 </div>
             </div>
-        </div>
-        <!-- Project 2 -->
-        <div
-            class="snap-start flex-none w-full bg-[url('./static/backgroundSprite_Blue.png')] md:bg-[length:400px_400px] bg-[length:300px_300px] bg-repeat min-h-screen w-full">
-            <div class="bg-beige grid grid-cols-[56fr_44fr] md:gap-y-32 w-[88%] md:w-[70%] mx-auto min-h-screen">
-                <div class="p-10">
-                    <h1 class="font-serif font-semibold text-xl md:text-3xl h-fit">Coffee Data Visualization</h1>
-                    <ul class="flex font-serif font-regular gap-3 mt-3">
-                        <li class="bg-blue-200 px-1">data visualization</li>
-                        <li class="bg-blue-200 px-1">JavaScript</li>
-                        <li class="bg-blue-200 px-1">D3</li>
-                    </ul>
-                    <div class="space-y-4 px-8 md:px-0 font-serif md:text-lg mt-6">
-                        <p>
-                            An interactive data visualization project that
-                            maps and analyzes global coffee trade patterns, production, and consumption.
-                        </p>
-                        <p>
-                            Explore insights into the coffee trade, global
-                            coffee consumption patterns, pricing trends, consumer reviews, and the diverse types of
-                            coffee consumed across different countries.
-                        </p>
+
+            <!-- Row 1, Card 2 - Top Right -->
+            <div
+                class="w-[430px] h-[320px] bg-orange shadow-xl rounded-lg p-3 transform rotate-3 z-12 hover:rotate-0 hover:scale-105 hover:z-50 hover:shadow-2xl transition-all duration-300 ease-in-out cursor-pointer">
+                <div class="p-6 h-full flex flex-col border-dashed border-[3px] rounded-lg border-white">
+                    <h2 class="font-serif text-xl font-semibold mb-3 leading-tight">
+                        Interactive Manipulation of Objects for 3D Gaussian Splatting
+                    </h2>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="bg-orange-200 px-2 py-[3px] font-serif text-sm">WebGL</span>
+                        <span class="bg-orange-200 px-2 py-[3px] font-serif text-sm">JavaScript</span>
+                        <span class="bg-orange-200 px-2 py-[3px] font-serif text-sm">GLSL</span>
                     </div>
-                    <div class="pr-24">
-                        <div
-                            class="bg-brown w-full border-2 border-solid border-black font-serif md:text-lg mt-6 relative">
-                            <img class="absolute bottom-10 right-[-10px] w-12" src="./static/PixelArt/sunflower.png"
-                                alt="">
-                            <p class="px-4 py-2">Check it out !</p>
-                            <a class="px-4 py-2 hover:text-gray-800"
-                                href="https://coffeeviz.cafeduvesper.net/">coffeeviz.cafeduvesper.net</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="border-solid border-l border-black flex flex-col items-center w-full ">
-                    <div
-                        class="bg-brown border-2 border-solid border-dark-brown flex w-[60%] justify-center mt-8  mx-16 p-3">
-                        <img class="border-2 border-solid border-dark-brown " src="./static/projects/dataVizGraph"
-                            alt="">
-                    </div>
-                    <div class="bg-brown w-[50%] border-2 border-solid border-black font-serif  mt-4 mb-16">
-                        <p class="pl-4 ">Coffee world trade network represented as a graph</p>
-                    </div>
-                    <div class="bg-brown border-2 border-solid border-dark-brown flex w-[70%] justify-center mx-16 p-3">
-                        <img class="border-2 border-solid border-dark-brown " src="./static/projects/dataVizMap" alt="">
-                    </div>
-                    <div class="bg-brown w-[60%] border-2 border-solid border-black font-serif  mt-4">
-                        <p class="pl-4">Coffee trade network world map</p>
-                    </div>
+                    <p class="text-sm font-serif leading-relaxed text-gray-800 flex-grow">
+                        Interactive 3D scene editing system with multi-modal segmentation and hit-testing algorithm
+                    </p>
                 </div>
             </div>
-        </div>
 
-        <!-- Project 23-->
-        <div
-            class="snap-start flex-none w-full bg-[url('./static/backgroundSprite_Pink.png')] md:bg-[length:400px_400px] bg-[length:300px_300px] bg-repeat min-h-screen w-full">
-            <div class="bg-beige grid grid-cols-[56fr_44fr] md:gap-y-32 w-[88%] md:w-[70%] mx-auto min-h-screen">
-                <div class="p-10">
-                    <h1 class="font-serif font-semibold text-xl md:text-3xl h-fit">Coffee Data Visualization</h1>
-                    <ul class="flex font-serif font-regular gap-3 mt-3">
-                        <li class="bg-pink-200 px-1">data visualization</li>
-                        <li class="bg-pink-200 px-1">JavaScript</li>
-                        <li class="bg-pink-200 px-1">D3</li>
-                    </ul>
-                    <div class="space-y-4 px-8 md:px-0 font-serif md:text-lg mt-6">
-                        <p>
-                            An interactive data visualization project that
-                            maps and analyzes global coffee trade patterns, production, and consumption.
-                        </p>
-                        <p>
-                            Explore insights into the coffee trade, global
-                            coffee consumption patterns, pricing trends, consumer reviews, and the diverse types of
-                            coffee consumed across different countries.
-                        </p>
+            <!-- Row 2 - Single card spanning both columns, centered -->
+            <div
+                class="col-span-2 w-[430px] h-[320px] bg-yellow shadow-xl rounded-lg p-3 transform rotate-1 -mt-24 z-20 hover:rotate-0 hover:scale-105 hover:z-50 hover:shadow-2xl transition-all duration-300 ease-in-out cursor-pointer">
+                <div class="p-6 h-full flex flex-col border-dashed border-[3px] rounded-lg border-white">
+                    <h2 class="font-serif text-xl font-semibold mb-3 leading-tight">
+                        Line Drawing Vectorization
+                    </h2>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="bg-yellow-200 px-2 py-[3px] font-serif text-sm">Python</span>
+                        <span class="bg-yellow-200 px-2 py-[3px] font-serif text-sm">Computer Graphics</span>
                     </div>
-                    <div class="pr-24">
-                        <div
-                            class="bg-brown w-full border-2 border-solid border-black font-serif md:text-lg mt-6 relative">
-                            <img class="absolute bottom-10 right-[-10px] w-12" src="./static/PixelArt/sunflower.png"
-                                alt="">
-                            <p class="px-4 py-2">Check it out !</p>
-                            <a class="px-4 py-2 hover:text-gray-800"
-                                href="https://coffeeviz.cafeduvesper.net/">coffeeviz.cafeduvesper.net</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="border-solid border-l border-black flex flex-col items-center w-full ">
-                    <div
-                        class="bg-brown border-2 border-solid border-dark-brown flex w-[60%] justify-center mt-8  mx-16 p-3">
-                        <img class="border-2 border-solid border-dark-brown " src="./static/projects/dataVizGraph"
-                            alt="">
-                    </div>
-                    <div class="bg-brown w-[50%] border-2 border-solid border-black font-serif  mt-4 mb-16">
-                        <p class="pl-4 ">Coffee world trade network represented as a graph</p>
-                    </div>
-                    <div class="bg-brown border-2 border-solid border-dark-brown flex w-[70%] justify-center mx-16 p-3">
-                        <img class="border-2 border-solid border-dark-brown " src="./static/projects/dataVizMap" alt="">
-                    </div>
-                    <div class="bg-brown w-[60%] border-2 border-solid border-black font-serif  mt-4">
-                        <p class="pl-4">Coffee trade network world map</p>
-                    </div>
+                    <p class="text-sm font-serif leading-relaxed text-gray-800 flex-grow">
+                        Bitmap-to-vector conversion system for hand-drawn sketches using skeleton extraction and
+                        topological graph construction
+                    </p>
                 </div>
             </div>
-        </div>
 
+            <!-- Row 3, Card 4 - Bottom Left -->
+            <div
+                class="w-[430px] h-[320px] bg-green shadow-xl rounded-lg p-3 transform -rotate-6 z-10 -mt-24 z-20 hover:rotate-0 hover:scale-105 hover:z-50 hover:shadow-2xl transition-all duration-300 ease-in-out cursor-pointer">
+                <div class="p-6 h-full flex flex-col border-dashed border-[3px] rounded-lg border-white">
+                    <h2 class="font-serif text-xl font-semibold mb-3 leading-tight">
+                        Coffee Data Visualization Platform
+                    </h2>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="bg-green-200 px-2 py-[3px] font-serif text-sm">D3.js</span>
+                        <span class="bg-green-200 px-2 py-[3px] font-serif text-sm">React</span>
+                        <span class="bg-green-200 px-2 py-[3px] font-serif text-sm">Data Viz</span>
+                    </div>
+                    <p class="text-sm font-serif leading-relaxed text-gray-800 flex-grow">
+                        Interactive visualization platform for exploring global coffee trade patterns and sustainability
+                        metrics
+                    </p>
+                </div>
+            </div>
+
+            <!-- Row 3, Card 5 - Bottom Right -->
+            <div
+                class="w-[430px] h-[320px] bg-orange shadow-xl rounded-lg p-3 transform rotate-3 z-10 -mt-24 z-20 hover:rotate-0 hover:scale-105 hover:z-50 hover:shadow-2xl transition-all duration-300 ease-in-out cursor-pointer">
+                <div class="p-6 h-full flex flex-col border-dashed border-[3px] rounded-lg border-white">
+                    <h2 class="font-serif text-xl font-semibold mb-3 leading-tight">
+                        Neural Network Music Generator
+                    </h2>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="bg-orange-200 px-2 py-[3px] font-serif text-sm">TensorFlow</span>
+                        <span class="bg-orange-200 px-2 py-[3px] font-serif text-sm">Python</span>
+                        <span class="bg-orange-200 px-2 py-[3px] font-serif text-sm">AI</span>
+                    </div>
+                    <p class="text-sm font-serif leading-relaxed text-gray-800 flex-grow">
+                        Deep learning model that generates original music compositions using LSTM networks trained on
+                        classical datasets
+                    </p>
+                </div>
+            </div>
+
+        </div>
     </div>
-
-    <script>
-        const container = document.getElementById('projectsContainer');
-        const prevBtn = document.getElementById('prevBtn');
-        const nextBtn = document.getElementById('nextBtn');
-        let currentProject = 0;
-        const totalProjects = container.children.length;
-
-        // Hide prev button initially
-        prevBtn.style.display = 'none';
-
-        prevBtn.addEventListener('click', () => {
-            if (currentProject > 0) {
-                currentProject--;
-                container.style.transform = `translateX(-${currentProject * 100}%)`;
-                updateButtons();
-            }
-        });
-
-        nextBtn.addEventListener('click', () => {
-            if (currentProject < totalProjects - 1) {
-                currentProject++;
-                container.style.transform = `translateX(-${currentProject * 100}%)`;
-                updateButtons();
-            }
-        });
-
-        function updateButtons() {
-            prevBtn.style.display = currentProject === 0 ? 'none' : 'block';
-            nextBtn.style.display = currentProject === totalProjects - 1 ? 'none' : 'block';
-        }
-    </script>
 </body>
 
 </html>
