--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
 
             <!-- Row 3, Card 4 - Bottom Left -->
-            <div
+            <a href="project-details.html"
                 class="w-[430px] h-[320px] bg-green shadow-xl rounded-lg p-3 transform -rotate-6 z-10 -mt-24 z-20 hover:rotate-0 hover:scale-105 hover:z-50 hover:shadow-2xl transition-all duration-300 ease-in-out cursor-pointer">
                 <div class="p-6 h-full flex flex-col border-dashed border-[3px] rounded-lg border-white">
                     <h2 class="font-serif text-xl font-semibold mb-3 leading-tight">
@@ -135,7 +135,7 @@
                         metrics
                     </p>
                 </div>
-            </div>
+            </a>
 
             <!-- Row 3, Card 5 - Bottom Right -->
             <div
