--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
     </div>
     <!-- INTRO SECTION -->
-    <section class="w-full flex flex-col items-center justify-center relative pb-10">
-        <!-- Content positioned on top with proper spacing -->
+<!--     <section class="w-full flex flex-col items-center justify-center relative pb-10">
         <div class="flex items-center flex-col w-full pt-[70px] relative z-10">
             <div class="relative -translate-x-20">
                 <img src="./static/chat-bubble.png" class="w-64">
@@ -103,11 +102,6 @@
             <img src="./static/PixelArt/sunflower.png" class="absolute w-12 translate-y-64 translate-x-24" alt="">
         </div>
 
-        <!-- Pattern background positioned behind the content -->
-
-        <!-- <div class="bg-pattern animate-pattern-diagonal w-full h-72 top-[85px] absolute  left-0"></div> -->
-
-        <!-- Text section -->
         <div class="w-full flex justify-center py-8">
             <div class="w-[26em]">
                 <p class="font-serif text-center text-xl">
@@ -119,6 +113,7 @@
             </div>
         </div>
     </section>
+     -->
 
 
     <div
