--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <!-- Chibi circle -->
-                <div class="bg-off-white-200 flex items-center justify-center w-52 md:w-52 rounded-full p-7 relative animate-pop opacity-0 scale-0"
+                <div id="main-chibi-container"  class="bg-off-white-200 flex items-center justify-center w-52 md:w-52 rounded-full p-7 relative animate-pop opacity-0 scale-0"
                     id="chibi-circle" style="animation-delay: 0.5s; animation-fill-mode: both;">
                     <img src="./static/PixelArt/myChibi-cropped.png" alt="Pixel art chibi" class="">
                     <!-- Sunflower positioned relative to chibi circle -->
@@ -89,17 +89,16 @@
     <!-- --------------------------------------------------------------------------------------------------------------- -->
 
 
+    <div class="mt-16 ">
+        <h1 class="font-serif text-4xl text-center mb-10">Q&A Board !</h1>
 
-
-    <div class="w-full flex justify-center py-20">
-        <div class="relative w-full max-w-6xl px-4">
+    <div class="w-full flex justify-center ">
+        <div class="relative w-full max-w-[75%] px-4">
             <div class="flex flex-col  gap-8">
 
                 <!-- Blackboard with shadow  -->
-                <div class="relative ">
-
-                    <!-- Brown border/frame -->
-                    <div class="bg-brown p-6 shadow-2xl">
+                <div class="relative flex justify-center">
+                    <div class="bg-brown-200 p-6 shadow-2xl w-fit">
                         <!-- Blackboard - -->
                         <div class="bg-[#4F5A5D] w-[700px] h-[360px] p-12 relative">
 
@@ -155,7 +154,7 @@
                 </div>
 
                 <!-- Chibi and Chat/Dialogue -->
-                <div class="relative bottom-0 flex items-center gap-10 -translate-y-14">
+                <div class="relative bottom-0 flex items-center gap-10 -translate-y-[10rem]">
                     <!-- Chat bubble and chibi circle stacked vertically -->
                     <div class="flex flex-col items-center">
                         <!-- Chat bubble container (ALWAYS takes up space) -->
@@ -169,17 +168,11 @@
                             </div>
                         </div>
                         <!-- Chibi circle -->
-                        <div
-                            class="bg-off-white-200 flex justify-center w-52 md:w-52 rounded-full p-7 relative">
-                            <img src="./static/PixelArt/myChibi-cropped.png" alt="Pixel art chibi" class="">
-                            <!-- Sunflower positioned relative to chibi circle -->
-                            <img src="./static/PixelArt/sunflower.png"
-                                class="absolute w-14 bottom-0 right-0 translate-x-2 translate-y-2" alt="">
-                        </div>
+                        <div id="chibi-target" class="relative flex justify-center w-52 h-52"> </div>
                     </div>
                     <!-- Dialogue Box aligned horizontally (ALWAYS visible, just hidden with opacity) -->
                     <div id="blackboard-dialogue"
-                        class="bg-off-white rounded-lg w-[38rem] min-h-[8rem] max-h-[8rem] overflow-y-auto p-7 px-9 top-10 relative opacity-0 border-2 border-black transition-opacity duration-400">
+                        class="bg-off-white rounded-lg w-[54rem] min-h-[10rem] max-h-[8rem] overflow-visible p-7 px-9 top-[4.5rem] relative opacity-0 border-2 border-black transition-opacity duration-400">
                         <p class="text-lg font-serif">
                             <span id="blackboard-answer"></span>
                             <span id="blackboard-cursor" class="cursor-hidden cursor-blink">|</span>
@@ -204,7 +197,7 @@
     <!-- --------------------------------------------------------------------------------------------------------------- -->
 
 
-    <div class="">
+    <div class="mt-20">
         <h1 class="font-serif text-4xl mb-12 text-center">My Projects !</h1>
 
         <!-- Cards Container - Grid layout first -->
